# python-command-line-helpers

./: .gitignore  LICENSE  README.md  __init__.py  arg_casting.py  command_building.py  namespace_formatter.py  pretty_command.py  pyproject.toml  run_command.py
python_command_line_helpers/: __init__.py  arg_casting.py
src/python_command_line_helpers/: __init__.py  arg_casting.py  command_building.py  input_cleaning.py  overwrite_then_delete.py  pretty_command.py
tests/: run_all.py  test_imports.py
tests/arg_casting/: __init__.py
tests/arg_casting/black_box/: __init__.py  test_cast_cli_arg.py
tests/arg_casting/white_box/: __init__.py  test_dict_helpers.py  test_generic_helper.py  test_list_and_union_helpers.py
tests/command_building/: __init__.py
tests/command_building/black_box/: __init__.py  test_resolve_paths.py
tests/command_building/white_box/: __init__.py  test_resolve_paths_internal_behavior.py
tests/input_cleaning/: __init__.py
tests/input_cleaning/black_box/: __init__.py  test_input_cleaning.py
tests/input_cleaning/white_box/: __init__.py  test_input_cleaning_internals.py
tests/overwrite_then_delete/black_box/: test_overwrite_then_delete.py
tests/overwrite_then_delete/white_box/: test_overwrite_then_delete_internals.py
tests/pretty_command/: __init__.py
tests/pretty_command/black_box/: __init__.py  test_command_to_str.py
tests/pretty_command/white_box/: __init__.py  test_pretty_command_helpers.py
